# agentic-evalkit

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.claude/skills/release-gate/: SKILL.md
.claude/skills/release-gate/references/: gate-commands.md
.claude/skills/release-gate/scripts/: run-gates.sh
.claude/skills/write-adr/: SKILL.md
.claude/skills/write-adr/references/: adr-template.md
.github/workflows/: ci.yml  live-provider.yml  live-swebench.yml  publish.yml  release-gates.yml
docs/: index.md  prior-art.md
docs/adr/: 0001-standalone-boundary.md  0002-immutable-versioned-contracts.md  0003-provider-plugins-and-hugging-face-baseline.md  0004-content-addressed-dataset-cache.md  0005-benchmark-adapters-and-harnesses.md  0006-execution-target-boundary.md  0007-objective-first-grading.md  0008-statistical-comparability.md  0009-optional-dependencies-and-plugins.md  0010-offline-dataset-contract.md  0011-offline-resolution-cache.md  0012-grounded-citation-probe.md  0013-contamination-metadata-and-canaries.md  0014-swebench-docker-harness-executor.md  0015-environment-and-code-fingerprints-gate-comparability.md  0016-cluster-robust-intervals-for-repeated-attempts.md  0017-grade-before-spill-large-outputs.md  0018-redact-and-bound-judge-candidate-output.md  0019-retract-unshipped-entry-point-plugin-discovery.md  0020-wilson-lower-bound-judge-floor-and-response-envelope.md
docs/guides/: cli-reference.md  graders.md  http-agent-example.md  providers.md  quickstart.md  swebench.md  targets.md
docs/plans/: 2026-07-02-agentic-evalkit-initial-release.md  2026-07-02-agentic-evalkit-plan-modifications.md  2026-07-04-arp-integration-analysis.md  README.md  execution-handoff.md
docs/plans/agent-prompts/: COMMON.md  task4-cache.md  task5-local.md  task6-hf.md
docs/release/: initial-release-acceptance.md  v0.1-checkpoint.md
docs/specs/: 2026-07-02-agentic-evalkit-design.md  eval-contamination-metadata-and-canaries.md  eval-swebench-harness-executor.md
docs/superpowers/plans/: 2026-07-02-agentic-evalkit-initial-release.md
docs/superpowers/specs/: 2026-07-02-agentic-evalkit-design.md
examples/http_agent/: README.md  eval.yaml  questions.jsonl  run_example.py  stub_agent_server.py
external_analysis/: agentic-evalkit-plan-execution-report.md  agentic-evalkit-plan-review.md  gemini35flassh_evaluation_report.md  opus47_evaluation_report.md  plan-quality-assessment.md
scripts/: repro-linux-ci.sh
src/agentic_evalkit/: __init__.py  artifacts.py  errors.py  events.py  manifest.py  plugins.py  provenance.py  runner.py
src/agentic_evalkit/benchmarks/: __init__.py  base.py  grounding.py  gsm8k.py  harness.py  swebench.py  swebench_docker.py
src/agentic_evalkit/cli/: __init__.py  app.py  datasets.py  doctor.py  reports.py  runs.py
src/agentic_evalkit/datasets/: __init__.py  base.py  cache.py  catalog.py  huggingface.py  local.py  presets.py  resolution_cache.py
src/agentic_evalkit/examples/: __init__.py  reference_judge.py  zero_target.py
src/agentic_evalkit/graders/: __init__.py  base.py  calibration.py  composite.py  contamination.py  exact.py  grounding.py  harness.py  judge.py  rubric.py
src/agentic_evalkit/models/: __init__.py  base.py  datasets.py  execution.py  grades.py  grounding.py  runs.py  samples.py
src/agentic_evalkit/reporters/: __init__.py  base.py  html.py  json.py  jsonl.py  markdown.py
src/agentic_evalkit/reporters/templates/: report.html.j2
src/agentic_evalkit/stats/: __init__.py  aggregate.py  compare.py  power.py  reliability.py
src/agentic_evalkit/targets/: __init__.py  base.py  callable.py  http.py  subprocess.py
tests/contract/: test_adrs.py  test_dependency_boundary.py  test_live_test_boundary.py  test_models.py  test_provenance_drift.py  test_public_docs.py  test_redaction_enumeration.py
tests/fixtures/: bad_plugin.py  good_plugin.py
tests/fixtures/datasets/: items.csv  items.jsonl  items.yaml
tests/fixtures/huggingface/: dataset_info.json  is_valid.json  parquet.json  rows.json  size.json  splits.json  statistics.json
tests/fixtures/huggingface/swebench_verified/: dataset_info.json  parquet.json  rows.json  size.json  splits.json  statistics.json
tests/fixtures/manifests/: gsm8k.yaml
tests/integration/: test_cache_multiprocess_policy.py  test_clean_wheel.py  test_cli.py  test_grounded_citation_manifest.py  test_manifest_selectable_graders.py  test_offline_resolution_cache.py  test_run_report_wiring.py  test_runner.py  test_runner_concurrency_determinism.py  test_swebench_registration.py
tests/live/: test_cli_live.py  test_huggingface_live.py  test_swebench_harness_live.py
tests/unit/: test_artifacts.py  test_errors.py  test_events.py  test_manifest.py  test_package.py  test_plugins.py  test_provenance.py  test_reference_judge.py  test_spill_redaction.py
tests/unit/benchmarks/: _benchmark_fixtures.py  test_grounding_adapter.py  test_gsm8k_adapter.py  test_harness.py  test_swebench_adapter.py  test_swebench_docker.py
tests/unit/datasets/: test_cache.py  test_catalog.py  test_huggingface_provider.py  test_local_provider.py  test_offline_socket_guard.py  test_resolution_cache.py
tests/unit/graders/: test_composite.py  test_contamination.py  test_exact_match.py  test_grounding.py  test_harness_grader.py  test_judge.py  test_judge_calibration_floor.py  test_rubric.py
tests/unit/reporters/: conftest.py  test_html_reporter.py  test_json_reporter.py  test_jsonl_reporter.py  test_markdown_reporter.py  test_redaction_policy.py  test_reporter_redaction_integration.py
tests/unit/stats/: _stats_fixtures.py  test_aggregate.py  test_compare.py  test_power.py  test_reliability.py
tests/unit/targets/: test_callable_target.py  test_http_target.py  test_subprocess_target.py
tests/unit/targets/fixtures/: crlf_split_target.py  echo_target.py  hang_target.py  malformed_json_target.py  mismatched_sample_id_target.py  oversized_output_target.py  oversized_stderr_and_output_target.py  oversized_stderr_target.py  stderr_then_malformed_target.py
