[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-evalkit"
version = "0.1.0"
description = "Evaluate agentic systems with reproducible, evidence-first grading."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "agentic-evalkit contributors" }]
keywords = ["evaluation", "agents", "benchmarking", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2,<3",
  "typer>=0.12,<1",
  "rich>=13,<15",
  "pyyaml>=6,<7",
  "huggingface-hub>=0.20,<2",
  "httpx>=0.28.1,<1",
  "jinja2>=3,<4",
]

[project.urls]
Changelog = "https://github.com/agentic-evalkit/agentic-evalkit/blob/main/CHANGELOG.md"
Homepage = "https://github.com/agentic-evalkit/agentic-evalkit"
Issues = "https://github.com/agentic-evalkit/agentic-evalkit/issues"
Repository = "https://github.com/agentic-evalkit/agentic-evalkit"
Security = "https://github.com/agentic-evalkit/agentic-evalkit/blob/main/SECURITY.md"

[project.scripts]
agentic-evalkit = "agentic_evalkit.cli:app"

[project.optional-dependencies]
parquet = []
judges = []
swebench = []

[dependency-groups]
dev = [
  "build>=1,<2",
  "mkdocs>=1,<2",
  "mkdocs-material>=9,<10",
  "mypy>=1,<2",
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<1",
  "pytest-cov>=5,<6",
  "pytest-repeat>=0.9,<1",
  "ruff>=0.6,<1",
  "types-pyyaml>=6,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_evalkit"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
asyncio_mode = "auto"
markers = [
  "integration: component integration tests",
  "live: requires network access",
]

[tool.coverage.run]
branch = true
source = ["agentic_evalkit"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["agentic_evalkit"]
