[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-evalkit"
version = "0.2.0"
description = "Evaluate agentic systems with reproducible, evidence-first grading."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Andy Freeman", email = "tandfreeman@gmail.com" }]
keywords = ["evaluation", "agents", "benchmarking", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Testing",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2,<3",
  "typer>=0.12,<1",
  "rich>=13,<15",
  "pyyaml>=6,<7",
  "huggingface-hub>=0.20,<2",
  "httpx>=0.28.1,<1",
  "jinja2>=3,<4",
]

[project.urls]
Changelog = "https://github.com/tafreeman/agentic-evalkit/blob/main/CHANGELOG.md"
Homepage = "https://github.com/tafreeman/agentic-evalkit"
Issues = "https://github.com/tafreeman/agentic-evalkit/issues"
Repository = "https://github.com/tafreeman/agentic-evalkit"
Security = "https://github.com/tafreeman/agentic-evalkit/blob/main/SECURITY.md"

[project.scripts]
agentic-evalkit = "agentic_evalkit.cli:app"

[project.optional-dependencies]
swebench = ["swebench>=4.1,<5", "docker>=7.1,<8"]

[dependency-groups]
dev = [
  "build>=1,<2",
  "mkdocs>=1,<2",
  "mkdocs-material>=9,<10",
  "mypy>=1,<2",
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<1",
  "pytest-cov>=5,<6",
  "pytest-repeat>=0.9,<1",
  "ruff>=0.6,<1",
  "types-pyyaml>=6,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_evalkit"]

[tool.pytest.ini_options]
# --cov-config is pinned explicitly (not left to coverage.py's own file
# auto-discovery): without it, pytest-cov's internal parallel-mode data file
# and coverage.py's combine-time accumulator can each resolve the branch
# setting differently on some platforms, crashing with
# "coverage.exceptions.DataError: Can't combine ... coverage data with ...
# data" -- see pytest-dev/pytest-cov#479 and nedbat/coveragepy#512.
addopts = "--strict-config --strict-markers -m 'not live' --cov-config=pyproject.toml"
asyncio_mode = "auto"
markers = [
  "integration: component integration tests",
  "live: opt-in network tests confined to tests/live",
]

[tool.coverage.run]
branch = true
source = ["agentic_evalkit"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ASYNC", "S", "B", "A", "C4", "SIM", "TCH", "RUF"]

[tool.ruff.lint.flake8-type-checking]
# Pydantic v2 needs a field's annotated type to be a real, importable object
# at class-definition time to build its validators -- unlike a plain function
# signature, moving a FrozenModel/BaseModel field's type import behind
# `if TYPE_CHECKING:` breaks model construction, it doesn't just satisfy the
# linter. Every wire model in this package subclasses FrozenModel
# (agentic_evalkit.models.base), so TC001/002/003 must treat both as
# runtime-evaluated and never suggest moving their field-type imports.
runtime-evaluated-base-classes = ["agentic_evalkit.models.base.FrozenModel", "pydantic.BaseModel"]

[tool.ruff.lint.per-file-ignores]
# pytest's assertion mechanism *is* `assert`; S101 firing on every test
# assertion is noise, not a finding. S105 in tests/ is exclusively deliberately-
# fake secret fixtures used to exercise redaction (e.g. tests/unit/test_manifest.py's
# _HOOK_SECRET, tests/integration/test_runner.py's _PLANTED_TOKEN) -- their entire
# purpose is verifying a fake secret gets redacted, never a real credential.
"tests/**" = ["S101", "S105"]
# DatasetNotFound, DatasetAccessDenied, TargetFailure, TargetTimeout, and their
# siblings are stable, documented public API (errors.py __all__, referenced by
# docs/guides/providers.md). Renaming to satisfy N818's Error-suffix convention
# is a breaking change for any caller doing `except DatasetNotFound:` -- out of
# scope for a lint-hygiene pass; revisit at a deliberate major-version bump.
"src/agentic_evalkit/errors.py" = ["N818"]
# ArtifactStoreLimitExceeded: same rationale (public API, artifacts.py __all__).
"src/agentic_evalkit/artifacts.py" = ["N818"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["agentic_evalkit"]
